Fixed horizontal scrolling issue

--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
 body {
   display: grid;
   font-family: "Alumni Sans", Arial, Helvetica, sans-serif;
-  max-width: 100%;
+  max-width: 100vw;
   min-height: 100vh;
   background: radial-gradient(rgb(27, 21, 1), rgb(0, 0, 0));
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
 }
 
@@ -80,7 +80,7 @@ body {
   text-align: center;
   position: absolute;
   place-self: center;
-  padding: 20px;
+  padding: 40px;
   /* position: absolute; */
 }
 
@@ -116,7 +116,7 @@ h2 {
 .content {
   place-self: center;
   text-align: center;
-  width: 1100px;
+  max-width: 1100px;
   color: white;
   /* width: 100%; */
   height: 100%;
@@ -230,7 +230,7 @@ h2 {
 
 footer {
   width: 100vw;
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   color: white;
   padding: 20px;
   place-content: center;
